--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                 script {
                     dir('terraform') {
-                        sh "terraform init"
+                        sh "terraform init -upgrade"
                         sh "terraform apply -auto-approve"
                     }
                 }
@@ -21,9 +21,9 @@ pipeline {
             steps {
                 script {
                     dir('kubernetes') {
-                        sh "aws eks update-kubeconfig --name myapp-eks-cluster"
-                        sh "kubectl apply -f nginx-deployment.yaml"
-                        sh "kubectl apply -f nginx-service.yaml"
+                        sh "aws eks update-kubeconfig --name etsi-eks-cluster"
+                        sh "kubectl apply -f etsi-deployment.yaml"
+                        sh "kubectl apply -f etsi-service.yaml"
                     }
                 }
             }
